--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,10 +1,20 @@
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ums
+spring.application.name=Financial-Management_System
+spring.datasource.url=jdbc:mysql://localhost:3306/ums?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=mysql1234
+spring.datasource.password=Vishal@02
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=backendserver5402
+spring.mail.password=yetgdmihbwxlczll
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port = 8080
