--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Financial-Management_System
-spring.datasource.url=jdbc:mysql://localhost:3306/ums?createTableIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fms?createTableIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=Vishal@02
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
