--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Financial-Management_System
 spring.datasource.url=jdbc:mysql://localhost:3306/ums?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=Vishal@02
+spring.datasource.password=mysql1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
