--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,20 +1,25 @@
+#mysql db properties
 spring.application.name=Financial-Management_System
 spring.datasource.url=jdbc:mysql://localhost:3306/ums?createTableIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=mysql1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 
+#swagger properties
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=backendserver5402
-spring.mail.password=yetgdmihbwxlczll
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#server port
+server.port = 8081
 
-server.port = 8080
+# Kafka settings
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=user-management-group0
+
+# Other optional properties
+spring.kafka.consumer.max-poll-records=500
+spring.kafka.listener.missing-topics-fatal=false
+spring.kafka.admin.fail-fast=true
+
