--- a/notification-management-service/src/main/resources/application.properties
+++ b/notification-management-service/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Kafka settings
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=notification-management-group0
+
 #mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
