--- a/account-management-service/src/main/resources/application.properties
+++ b/account-management-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ams
-spring.datasource.username=root
-spring.datasource.password=mysql1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
@@ -10,4 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #server prop
-server.port=8082
+#server.port=8082
+server.address=0.0.0.0
