--- a/notification-management-service/src/main/resources/application.properties
+++ b/notification-management-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #server prop
-server.port=8083
+#server.port=8083
+server.address=0.0.0.0
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/nms
-spring.datasource.username=root
-spring.datasource.password=mysql1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
@@ -13,7 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Kafka settings
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=notification-management-group0
 
 #mail properties
