--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #mysql db properties
 spring.application.name=Financial-Management_System
-spring.datasource.url=jdbc:mysql://localhost:3306/ums?createTableIfNotExists=true
-spring.datasource.username=root
-spring.datasource.password=mysql1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
@@ -12,10 +12,12 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 #server port
-server.port = 8081
+#server.port = 8081
+server.address=0.0.0.0
+
 
 # Kafka settings
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=user-management-group0
 
 # Other optional properties
