fixed bug of kafka consumer

--- a/notification-management-service/pom.xml
+++ b/notification-management-service/pom.xml
@@ -19,9 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>com.financial.transaction.system</groupId>
-            <artifactId>user-management-service</artifactId>
+            <artifactId>base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
