--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - user-management-db
     ports:
       - "8081:8080"
+      - "5005:5005" # Debugger port
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://user-management-db:3306/userdb
       SPRING_DATASOURCE_USERNAME: userdbuser
@@ -80,6 +81,7 @@ services:
       - account-management-db
     ports:
       - "8082:8080"
+      - "5006:5005" # Debugger port
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://account-management-db:3306/accountdb
       SPRING_DATASOURCE_USERNAME: accountdbuser
@@ -94,6 +96,7 @@ services:
       - notification-management-db  # Only if it uses a database
     ports:
       - "8083:8080"
+      - "5007:5005" # Debugger port
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://notification-management-db:3306/notificationdb  # If using a DB
       SPRING_DATASOURCE_USERNAME: notificationdbuser
