--- a/transaction-management-service/src/main/resources/application.properties
+++ b/transaction-management-service/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#cassandra configs
+#spring.data.cassandra.contact-points=transaction-management-db:9042
+#spring.data.cassandra.keyspace-name=transactiondb
+#spring.data.cassandra.schema-action=create_if_not_exists
+
+
+
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
